--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material mkdocs-glightbox
       - run: mkdocs gh-deploy --force
-        working-directory: ./students/k33422/Antonova_Maria/LR2/îò÷åò
+        working-directory: ./students/k33422/Antonova_Maria/LR2/Ð¾Ñ‚Ñ‡ÐµÑ‚
